--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "webpack-cli": "^4.4.0"
   },
   "devDependencies": {},
+  "engines": {
+    "node": "10.13.0",
+    "npm": "6.4.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "repository": {
     "type": "git",
