--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "Harmonic",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "This README would normally document whatever steps are necessary to get the application up and running.",
+  "description": "My webpack project",
   "main": "webpack.config.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "babel-loader": "^8.2.2",
+    "nvm": "^0.0.4",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.9",
+    "react-router-dom": "^5.3.4",
+    "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^4.4.0"
+    "redux-thunk": "^2.4.2"
   },
-  "devDependencies": {},
   "engines": {
-    "node": "10.13.0",
-    "npm": "6.4.1"
+    "node": "v19.8.1",
+    "npm": "9.5.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack --watch --mode=development",
-    "postinstall": "webpack"
+    "postinstall": "webpack",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -42,5 +41,17 @@
   "bugs": {
     "url": "https://github.com/jmejia247/Harmonic/issues"
   },
-  "homepage": "https://github.com/jmejia247/Harmonic#readme"
+  "homepage": "https://github.com/jmejia247/Harmonic#readme",
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@webpack-cli/generators": "^3.0.7",
+    "babel-loader": "^9.1.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "jsxobj": "^1.1.0",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4"
+  }
 }
